# flexpasm

./: .gitignore  CHANGELOG.md  README.md  example.asm  example.py  format-code.py  pyproject.toml
docs/ru/: notes.md
examples/: build.asm  build.py  example.asm  example_templates.asm  macro.py  macros.asm  simple.py  templates.py
flexpasm/: backup.py  disusing.py  exceptions.py  macros.py  program.py  settings.py  templates.py  utils.py
flexpasm/builder/: toolchain.py
flexpasm/instructions/: base.py  mnemonics.py  registers.py  segments.py  syscalls.py
flexpasm/mnemonics/: arithmetic.py  base.py  bitshift.py  data.py  flow.py  io.py  logical.py
